--- a/bytedance/index.html
+++ b/bytedance/index.html
@@ -32,7 +32,7 @@
 						</ul>
 					</div>
 					<div><div class="title">你能收获</div></div>
-					<div class="get"><div class="line"><div class="line-circle"></div><div class="line-circle"></div><div class="line-circle"></div></div><div class="text-wrap"><div class="text">复杂的业务场景，有挑战性的工作，每天影响上亿用户</div><div class="text">行业里最优秀的同事，公平开放的文化氛围，超具竞争力的丰厚福利</div><div class="text">高速发展的公司，成熟稳定的业务，广阔的成长空间</div></div></div><div><div class="title">热招职位</div></div><div class="section-content">以下职位均开放实习、应届、初级、中级、资深岗位，海量HC就等你来</div>
+					<div class="get"><div class="line"><div class="line-circle"></div><div class="line-circle"></div><div class="line-circle"></div></div><div class="text-wrap"><div class="text">复杂的业务场景，有挑战性的工作，每天影响上亿用户</div><div class="text">行业里最优秀的同事，公平开放的文化氛围，超具竞争力的丰厚福利</div><div class="text">高速发展的公司，成熟稳定的业务，广阔的成长空间</div></div></div><div><div class="title">热招职位</div></div><div class="section-content">以下职位均开放实习、初级、中级、资深岗位，海量HC就等你来</div>
 					<div class="jobs">
 						<div class="rc-collapse" role="tablist">
 							<div class="rc-collapse-item">
